# ML_framework_FudanAI

./: .gitignore  README.md  enhanced_causal_demo.py  example.ipynb  main.py  pyproject.toml  setup.py  test_fixed_code.py
demo/: basic_demo.ipynb  enhanced_demo.py
demo/e_commerce/: Causal ML .ipynb  Causal ML- Dissatisfaction + Complain .ipynb
e_commerce/: README.md
examples/: train_cifar10_mlp.py  train_mlp.py
fudanai/core/: module.py  tensor.py
fudanai/data/: dataloader.py  dataset.py
fudanai/layers/: activation.py  linear.py
fudanai/losses/: cross_entropy.py
fudanai/optim/: sgd.py
fudanai/trainer/: engine.py
src/: data.py  estimation.py  graph.py  identification.py  model.py  refutation.py
src/estimators/: base.py  causal_forest.py  meta_learners.py  propensity_score.py
src/modern_estimators/: __init__.py  double_ml.py  propensity_score.py
