[project]
name = "ml-framework-fudanai"
version = "0.2.0"
description = "Enhanced Causal Inference Framework with Machine Learning"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.3",
    "networkx>=3.4.2",
    "pandas>=2.2.3",
    "pydot>=4.0.0",
    "scikit-learn>=1.6.1",
    "scipy>=1.13.0",
    "seaborn>=0.13.0",
    "xgboost>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "jupyter>=1.0.0",
    "ipython>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
